+ Rename components -> api + Update version swagger + Add new api uploads for uploading image to server
